[gd_scene load_steps=5 format=3 uid="uid://cqvow0bmjxti4"]

[ext_resource type="Script" path="res://gui/setting.gd" id="1_6vd88"]
[ext_resource type="Texture2D" uid="uid://dhofcn6myy5on" path="res://picture/grey.png" id="2_ed6c0"]
[ext_resource type="PackedScene" uid="uid://bbqx76q2sgvrq" path="res://save/saving_system.tscn" id="3_1xqqw"]
[ext_resource type="Theme" uid="uid://ecajw5bl35k8" path="res://theme/d_theme.tres" id="3_bul5l"]

[node name="Setting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6vd88")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ed6c0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -302.5
offset_right = 148.0
offset_bottom = 302.5
grow_horizontal = 2
grow_vertical = 2

[node name="Graphic" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
text = "Graphic"

[node name="Resolution2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
item_count = 4
selected = 1
popup/item_0/text = "1024x546"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1920x1080"
popup/item_3/id = 3

[node name="FullScreen" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
button_pressed = true
text = "Full screen"

[node name="Sounds" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
text = "Sounds"

[node name="Master2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
text = "Master: 50"

[node name="Master" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.02
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Bgm2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
text = "Bgm: 50"

[node name="Bgm" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.02
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Sfx2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_bul5l")
text = "Sfx: 50"

[node name="Sfx" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
max_value = 2.0
step = 0.02
value = 1.0
allow_greater = true
allow_lesser = true

[node name="Return" type="Button" parent="VBoxContainer" groups=["Button"]]
layout_mode = 2
theme = ExtResource("3_bul5l")
text = "Return"

[node name="SavingSystem" parent="." instance=ExtResource("3_1xqqw")]

[connection signal="item_selected" from="VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="VBoxContainer/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="value_changed" from="VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Bgm" to="." method="_on_bgm_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sfx" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="VBoxContainer/Return" to="." method="_on_return_pressed"]
